[tool.poetry]
name = "seo-analyzer"
version = "0.1.0"
description = "App to check sites for seo suitability"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
databases = "^0.7.0"
httpx = "^0.23.3"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
